BusOne/src/objects/EM_Expense_Estimate_vod__c.object
<CustomObject>
    <description>Used to capture estimated expenses when in the initial process of planning an event.</description>
    <fields>
        <fullName>Actual_vod__c</fullName>
        <description>Sum of actual values from related expense lines. This value is managed by a Veeva trigger.</description>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Committed_vod__c</fullName>
        <description>Sum of committed values from related expense lines. This value is managed by a Veeva trigger.</description>
        <label>Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_vod__c</fullName>
        <description>Estimated expense.</description>
        <label>Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Budget_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used to pull estimates from budgets to impact future planning.</description>
        <label>Event Budget</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Event_Budget_vod__c.Event_vod__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event_vod__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Event_Budget_vod__c</referenceTo>
        <relationshipLabel>Expense Estimates</relationshipLabel>
        <relationshipName>EM_Expense_Estimate_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Canceled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked automatically if the associated event is canceled.</description>
        <label>Event Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used for expense estimate rollups on an Event. Do not use this field if using Event Budgets.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Expense Estimates</relationshipLabel>
        <relationshipName>Expense_Estimate_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Budget__c</fullName>
        <formula>Event_Budget_vod__r.Budget_Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type_Code_vod__c</fullName>
        <description>Stamped value of the expense type code as the expense was recorded. This value will remain constant even if the expense type changes.</description>
        <label>Expense Type Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type_Name_vod__c</fullName>
        <description>Stamped value of the expense type as the expense was recorded. This value will remain constant even if the expense type changes.</description>
        <label>Expense Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Type_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to an expense type for the expense estimate</description>
        <label>Expense Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Expense_Type_vod__c.Active_vod__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Expense_Type_vod__c</referenceTo>
        <relationshipLabel>Expense Estimates</relationshipLabel>
        <relationshipName>Expense_Type_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <label>Expense Estimate</label>
    <nameField>
        <displayFormat>EE-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Estimates</pluralLabel>
    <recordTypes>
        <fullName>Expense_Estimate_vod</fullName>
        <active>true</active>
        <description>Expense Estimate</description>
        <label>Expense_Estimate_vod</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Event_Team_Member_vod__c</fullName>
        <label>Event Team Member</label>
    </sharingReasons>
</CustomObject>